auth page fix layout bugs

--- a/src/app/auth/AuthPage.module.scss
+++ b/src/app/auth/AuthPage.module.scss
@@ -1,27 +1,15 @@
-@import "@/../../../components/globals/variables.scss";
+@import '@/../../../components/globals/variables.scss';
 
 .formAuth {
-	display: grid;
+	display: flex;
+	flex-direction: column;
 	gap: 10px;
-	padding: 0 10px;
-	margin: 0 auto;
+	padding: 30px;
+	border-radius: 5px;
+	background: #c9c9c9;
+	width: 400px;
 
-	@media screen and (min-width: 475px) {
-		max-width: 80%;
-	}
-	@media screen and (min-width: 768px) {
-		max-width: 100%;
-	}
-	@media screen and (min-width: 1024px) {
-		max-width: 80%;
-	}
-
-	input {
-		padding: 10px;
-		border: 1px solid $black;
-	}
-
-	button[type="submit"] {
+	button[type='submit'] {
 		border: 1px solid $blue;
 		background-color: $blue;
 		padding: 10px;
@@ -31,9 +19,29 @@
 		font-size: 16px;
 		transition: 0.3s ease-in-out;
 		cursor: pointer;
+		border-radius: 5px;
+		transition: 0.3s;
 
 		&:hover {
-			opacity: 0.6;
+			background: black;
 		}
 	}
+
+	label {
+		font-size: 14px;
+	}
+
+	input {
+		height: 30px;
+		border-radius: 5px;
+		border: 0;
+	}
+}
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding-bottom: 60px;
 }
