--- a/src/components/globals/Layout/Layout.module.scss
+++ b/src/components/globals/Layout/Layout.module.scss
@@ -1,4 +1,4 @@
-@import "./../variables.scss";
+@import './../variables.scss';
 
 .wrapper {
 	display: flex;
@@ -9,15 +9,10 @@
 .container {
 	min-height: 100%;
 	margin: 0 auto;
-	padding: 0 10px 0 0;
+	padding: 30px;
 	min-width: 100%;
 	max-width: 1440px;
-	position: relative;
-	z-index: 2;
-	display: flex;
-	flex-direction: column;
-	padding: 0;
-	background: rgb(231, 231, 231);
+	background: rgb(238, 238, 238);
 
 	@media screen and (min-width: $desktop) {
 		margin: 0 auto;
